Update fr.csv : Second correction
Correction of the first translation after building the app and understanding better what each things means with the context.
I've also added "saved", "Discount After Tax" and "New Entry" translation to the file, i'll add them to the other languages later. and add the translation code in an other branch dedicated to improve the translated text in the app to not see english bits remaining anymore.

--- a/translations/fr.csv
+++ b/translations/fr.csv
@@ -1,4 +1,4 @@
-"${0} ${1} already exists.","${0} ${1} existe déjà.",
+"${0} ${1} already exits.","${0} ${1} existe déjà.",
 "${0} ${1} has been modified after loading","${0} ${1} a été modifié après le chargement.",
 "${0} ${1} is linked with existing records.","${0} ${1} est lié à des enregistrements existants.",
 "${0} already exists.","${0} existe déjà.",
@@ -83,16 +83,16 @@ Cancelled,Annulé,
 Cash,Espèces,
 "Cash Entry","Entrée d'argent",
 "Cash In Hand","Liquidités en main",
-Cashflow,Cashflow,
+Cashflow,"Flux d'argent",
 "Central Tax","Impôt global",
 "Change File","Changer le ficher",
-"Change Ref Type","Changer le type de référance",
+"Change Ref Type","Changer le type de référence",
 Chargeable,Facturable,
 "Chart Of Accounts Reviewed","Graphique du compte sélectioné",
 "Chart of Accounts","Graphique des comptes",
 "Check for Updates","Vérification des mises à jour",
 "Checking for updates","Vérification des mises à jour en cours",
-Cheque,,
+Cheque,Chèque,
 "City / Town","Ville / Village",
 Clear,Effacer,
 "Clearance Date","Date d'autorisation",
@@ -103,8 +103,8 @@ Closing,"Fermeture",
 "Closing (Dr)","Fermeture (Dr)",
 Color,Couleur,
 "Commission on Sales","Commission sur les ventes",
-Common,Basique,
-"Common Items","Items Communs",
+Common,Autres,
+"Common Items","Autres Items",
 "Company Address","Adresse de l'entreprise",
 "Company Logo","Logo de l'entreprise",
 "Company Name","Nom de l'entreprise",
@@ -239,8 +239,8 @@ General,Général,
 "General Ledger","Livre des Comptes général",
 "Get Started",Commencez,
 Gram,Gramme,
-"Grand Total","Total Général",
-"Grand Total (Company Currency)","Total Général (devise utilisé par la société)",
+"Grand Total","Total général",
+"Grand Total (Company Currency)","Total général (devise utilisée par la société)",
 "Greater Than","Plus grand que",
 Green,Vert,
 "Group By","Grouper par",
@@ -313,7 +313,7 @@ Loading...,Chargement...,
 "Loans and Advances (Assets)","Prêts et avances (actifs)",
 Locale,,
 Logo,,
-"Make Entry","Ajouter une entré",
+"Make Entry","Ajouter une entrée",
 "Make Payment","Effectuer le paiement",
 "Mar 23, 2022",,
 "Marketing Expenses","Dépenses de marketing",
@@ -330,7 +330,7 @@ Montserrat,,
 Name,Nom,
 Navigate,Naviguer,
 "Net Total","Total Net",
-"Net Total (Company Currency)","Total Net (devise utilisé par la société)",
+"Net Total (Company Currency)","Total Net (devise utilisée par la société)",
 "New ${0}","Nouveau ${0}",
 "New Account","Nouveau Compte",
 "New File","Nouveau Fichier",
@@ -343,12 +343,12 @@ Navigate,Naviguer,
 Next,Suivant,
 No,Non,
 "No Data to Import","Aucune Donnée à Importer",
-"No Values to be Displayed","Aucunes vValeurs à afficher",
-"No entries found","Aucunes entrées trouvées",
-"No expenses in this period","Aucune dépense dans dette dériode",
+"No Values to be Displayed","Aucune Valeur à afficher",
+"No entries found","Aucune entrée trouvée",
+"No expenses in this period","Aucune dépense dans cette période",
 "No filters selected","Aucun filtre sélectionné",
-"No labels have been assigned.","Aucuns labels n'ont été assignés.",
-"No results found","Aucun Résultats Trouvés",
+"No labels have been assigned.","Aucun label n'a été assigné.",
+"No results found","Aucun Résultat Trouvé",
 "No transactions yet","Aucune transaction pour le moment",
 "No updates available","Aucune mise à jour disponible",
 None,Aucun,
@@ -369,7 +369,7 @@ Notes,,
 Orange,,
 Organisation,Organisation,
 Outflow,"Dépenses",
-"Outstanding Amount","Montant en souffrance",
+"Outstanding Amount","Montant impayé",
 Oxygen,,
 "Pad Zeros","Remplir  de Zéros",
 Page,,
@@ -402,8 +402,8 @@ Place,Lieu,
 "Please Wait",,
 "Please assign the following fields ${0}",,
 "Please fill all values","Veuillez remplir toutes les valeurs",
-"Please select a file with data to import.",,
-"Please select a valid reference type.",,
+"Please select a file with data to import.","S'il-vous-plaît choisissez un fichier avec des données à importer.",
+"Please select a valid reference type.","S'il-vous-plaît séléctionnez un type de référence valide.",
 "Postal Code","Code postal",
 "Postal Expenses","Dépenses postales",
 "Posting Date","Date d'affichage",
@@ -413,15 +413,15 @@ Print,Imprimer,
 "Print Settings","Paramètres d'impression",
 "Print and Stationery","Impression et papeterie",
 Product,Produit,
-"Profit And Loss","Profits Et Pertes",
-"Profit and Loss","Profits et Pertes",
+"Profit And Loss","Profits et pertes",
+"Profit and Loss","Profits et pertes",
 Purchase,Achat,
-"Purchase Invoice","Facture d'Achat",
-"Purchase Invoice Item","Facture d'Achat d'Article",
-"Purchase Invoices","Factures d'Achat",
-"Purchase Item Created","Article Acheté Créé",
-"Purchase Items","Articles Achetés",
-"Purchase Payments","Paiements d'Achats",
+"Purchase Invoice","Facture d'achats",
+"Purchase Invoice Item","Facture d'achat d'articles",
+"Purchase Invoices","Factures d'achats",
+"Purchase Item Created","Article acheté créé",
+"Purchase Items","Articles achetés",
+"Purchase Payments","Paiements d'achats",
 Purchases,Achats,
 Purple,Violet,
 Quantity,Quantité,
@@ -441,7 +441,7 @@ Red,Rouge,
 "Ref. Date","Réf. Date",
 "Ref. Name","Réf. Nom",
 "Ref. Type","Réf. Type",
-Reference,Référance,
+Reference,Référence,
 "Reference Date","Date de référence",
 "Reference Number","Numéro de référence",
 "Reference Type","Type de référence",
@@ -460,20 +460,21 @@ Reverts,Rétablis,
 "Review your chart of accounts, add any account or tax heads as needed","Regarder votre graphique de compte, ajouter des comptes ou des taxes au besoin",
 "Right Index","Index Droit",
 Role,Rôle,
-"Root Type","Type racine",
+"Root Type","Type d'origine",
 "Round Off","Arrondir",
 "Round Off Account","Arrondir le Compte",
 Salary,Salaire,
 Sales,Ventes,
 "Sales Expenses","Frais de vente",
-"Sales Invoice","Factures de Ventes",
-"Sales Invoice Item","Factures de Ventes d'Articles",
-"Sales Invoice Settings","Paramètres des Factures des Ventes",
-"Sales Invoices","Factures de Ventes",
-"Sales Item Created","Article Vendu Créé",
-"Sales Items","Articles Vendus",
+"Sales Invoice","Facture de Vente",
+"Sales Invoice Item","Facture de Vente d'Article",
+"Sales Invoice Settings","Paramètres des Factures de Vente",
+"Sales Invoices","Factures des Ventes",
+"Sales Item Created","Article en Vente Créé",
+"Sales Items","Articles en Vente",
 "Sales Payments","Paiement des Ventes",
 Save,Enregistrer,
+Saved,Enregistré,
 "Save Template","Enregister le Modèle",
 "Save as PDF","Enregistrer en PDF",
 "Save as PDF Successful","Enregistré en PDF avec succès",
@@ -495,7 +496,7 @@ Select,Sélectionner,
 "Select your language",Sélectionner votre langue,
 "Selected file",Fichier sélectionné,
 Service,,
-"Set an Import Type","Definir un Type de d'Import",
+"Set an Import Type","Definir un Type d'Import",
 "Set the display language.","Définir une Langue d'Affichage",
 "Set the local code. This is used for number formatting.","Définissez le code local, il est utilisé pour le formatage des numéros.",
 "Sets how many digits are shown after the decimal point.","Définit le nombre de chiffres affichés après le point décimal.",
@@ -534,9 +535,9 @@ Stock,,
 "Stock Received But Not Billed","Stock reçu mais non facturé",
 Submit,Soumettre,
 "Submit Journal Entry?","Soumettre l'entrée dasn le Journal ?",
-"Submit Purchase Invoice?","Soumettre la Facture d'Achat",
-"Submit Sales Invoice?","Soumettre la Facture de Ventes",
-"Submit on Import","Soumettre un Import",
+"Submit Purchase Invoice?","Soumettre la facture d'achat",
+"Submit Sales Invoice?","Soumettre la facture de vente",
+"Submit on Import","Soumettre un import",
 Submitted,Soumis,
 Submitting,"Envoi en cours",
 Subtotal,Sous-total,
@@ -566,9 +567,9 @@ Temporary,Temporaire,
 Terms,Conditions,
 "The following ${0} entries were created: ${1}","Les ${0} entrées suivantes ont été créées: ${1}",
 "Theme Color","Couleur du thème",
-"This Month","Ce Mois",
-"This Quarter","Ce Trimestre",
-"This Year","Cette Année",
+"This Month","Ce mois",
+"This Quarter","Ce trimestre",
+"This Year","Cette année",
 "This action is permanent","Cette action est permanente",
 "This action is permanent and will cancel the following payment: ${0}","Cette action est permanente et annulera le paiement suivant : ${0}",
 "This action is permanent and will cancel the following payments: ${0}","Cette action est permanente et annulera les paiements suivants : ${0}",
@@ -591,12 +592,12 @@ Total,,
 "Total Liability (Credit)","Passif total (crédit) ",
 "Total Profit","Profit Total",
 "Total Spending","Dépenses totales",
-Transfer,Transférer,
+Transfer,Transfert,
 "Transfer Type","Type de transfert",
 "Travel Expenses","Frais de Transport",
 "Trial Balance","Balance Comptable",
 Type,Type,
-"Type to search...","Type á chercher...",
+"Type to search...","Type à chercher...",
 Unit,Unité,
 "Unit Type","Type d'unité",
 Unpaid,Impayé,
@@ -613,10 +614,10 @@ Version,,
 "View Purchases","Voir les Achats",
 "View Sales","Voir les Ventes",
 "Welcome to Frappe Books","Bienvenue chez Frappe Books",
-"Write Off","Pertes et Profits",
-"Write Off Account","Compte des Pertes et Profits",
-"Write Off Account not set. Please set Write Off Account in General Settings","Compte des Pertes et Profits no défini. Veuillez entrer un Compte des Pertes et Profits dans les paramètres généraux",
-"Write Off Entry","Entrées des pertes et profits",
+"Write Off","Déductible",
+"Write Off Account","Compte des déduction fiscales",
+"Write Off Account not set. Please set Write Off Account in General Settings","Compte des déduction fiscales no défini. Veuillez entrer un Compte des déduction fiscales dans les paramètres généraux",
+"Write Off Entry","Entrée de déductions fiscales",
 Yearly,Annuel,
 Years,Années,
 Yellow,Jaune,
@@ -626,3 +627,5 @@ john@doe.com,,
 reports,rapports,
 setup,configuration,
 "verify the imported data and click on",,
+"Discount After Tax","Réduction après taxes",
+"New Entry","Nouvelle entrée",
