incr: regenerate french translations

--- a/translations/fr.csv
+++ b/translations/fr.csv
@@ -1,8 +1,9 @@
-"${0} ${1} already exits.","${0} ${1} existe déjà.",
+"${0} ${1} already exists.",,
 "${0} ${1} has been modified after loading","${0} ${1} a été modifié après le chargement.",
 "${0} ${1} is linked with existing records.","${0} ${1} est lié à des enregistrements existants.",
 "${0} already exists.","${0} existe déjà.",
 "${0} filters applied","${0} filtres appliqués",
+"${0} out of ${1}",,
 "${0} rows","${0} lignes",
 "* required fields","* champs requis",
 0%,,
@@ -31,8 +32,8 @@ Accounts,Comptes,
 "Add Row","Ajouter une ligne",
 "Add Suppliers","Ajouter des fournisseurs",
 "Add Taxes","Ajouter des taxes",
-"Add a few customers to create your first invoice","Ajoutez quelques clients pour créer votre première facture de vente",
-"Add a few suppliers to create your first bill","Ajoutez quelques fournisseurs pour créer votre première facture d'achat",
+"Add a few customers to create your first sales invoice",,
+"Add a few suppliers to create your first purchase invoice",,
 "Add a filter","Ajouter un filtre",
 "Add a remark","Ajouter une remarque",
 "Add invoice terms","Ajouter votre politique de vente",
@@ -46,15 +47,15 @@ Address,Adresse,
 All,Tout,
 Amount,Montant,
 "Amount (Company Currency)","Montant (devise utilisée par la société)",
+"Amount Paid",,
 "Amount: ${0} and writeoff: ${1} is less than the total amount allocated to references: ${2}.","Le montant : ${0} et la déduction fiscale de : ${1} est inférieur au montant total alloué aux références : ${2}.",
 "Amount: ${0} is less than the total amount allocated to references: ${1}.","Le montant : ${0} est inférieur au montant total alloué aux références : ${1}.",
 "An error occurred.","Une erreur s'est produite.",
 "Application of Funds (Assets)","Application des fonds (bien actifs)",
 Arial,,
 "Ascending Order","Ordre Croissant",
-"Asset","Bien actif",
+Asset,"Bien actif",
 "Assign Imported Labels","Assigner les étiquettes importées",
-Back,Retour,
 "Bad import data.","Mauvaises données importées.",
 Balance,Balance,
 "Balance Sheet","Bilan Comptable",
@@ -65,8 +66,6 @@ Bank,Banque,
 "Bank Overdraft Account","Découvert bancaire",
 "Based On","Bassé sur",
 Basic,Basique,
-"Basic I","Basique I",
-"Basic II","Basique II",
 Bill,Facture,
 "Bill Created","Facture créée",
 "Bill No","Facture N°",
@@ -78,6 +77,8 @@ Business,Entreprise,
 Cancel,Annuler,
 "Cancel ${0} ${1}?","Annuler ${0} ${1} ?",
 Cancelled,Annulé,
+"Cannot Delete",,
+"Cannot delete ${0} ${1} because of linked entries.",,
 "Capital Equipments","Biens d'équipement",
 "Capital Stock","Capital social",
 Cash,Espèces,
@@ -85,20 +86,20 @@ Cash,Espèces,
 "Cash In Hand","Liquidités en main",
 Cashflow,"Flux d'argent",
 "Central Tax","Impôt global",
+"Change DB",,
 "Change File","Changer le ficher",
 "Change Ref Type","Changer le type de référence",
 Chargeable,Facturable,
 "Chart Of Accounts Reviewed","Graphique du compte sélectioné",
 "Chart of Accounts","Graphique des comptes",
-"Check for Updates","Vérification des mises à jour",
-"Checking for updates","Vérification des mises à jour en cours",
 Cheque,Chèque,
 "City / Town","Ville / Village",
 Clear,Effacer,
 "Clearance Date","Date d'autorisation",
 "Click to create","Cliquez pour créer",
 Close,Fermer,
-Closing,"Fermeture",
+"Close Frappe Books and try manually",,
+Closing,Fermeture,
 "Closing (Cr)","Fermeture (Cr)",
 "Closing (Dr)","Fermeture (Dr)",
 Color,Couleur,
@@ -124,15 +125,15 @@ Country,Pays,
 Courier,,
 Cr.,,
 Create,Créer,
-"Create Bill","Créer une facture",
 "Create Demo","Créer un démo",
-"Create Invoice","Créer une facture",
 "Create Purchase","Créer un achat",
+"Create Purchase Invoice",,
 "Create Sale","Créer une vente",
+"Create Sales Invoice",,
 "Create a new file and store it in your computer.","Créer un nouveau fichier et l'enregistrer sur votre ordinateur.",
 "Create a new file or select an existing one from your computer","Créer un nouveau fichier ou sélectionner un fichier existant sur votre ordinateur.",
-"Create your first bill and mail it to your supplier","Créer votre première facture et l'envoyer à votre fournisseur",
-"Create your first invoice and mail it to your customer","Créer votre première facture et l'envoyer à votre client",
+"Create your first purchase invoice from the created supplier",,
+"Create your first sales invoice for the created customer",,
 Created,Créé,
 "Created By","Créé par",
 "Creating Items and Parties","Créer des Items et des Partis",
@@ -159,7 +160,6 @@ Dashboard,"Tableau de bord",
 "Database file: ${0}","Fichier de base de donnée : ${0}",
 Date,,
 "Date Format","Format de la date",
-Day,Jour,
 Debit,Débit,
 "Debit Note",,
 Debtors,Débiteurs,
@@ -167,12 +167,25 @@ Debtors,Débiteurs,
 Delete,Supprimer,
 "Delete ${0} ${1}?","Supprimer ${0} ${1} ?",
 "Delete ${0}?","Supprimer ${0} ?",
+"Delete Failed",,
 Depreciation,Amortissement,
 "Depreciation Entry","Entrée d'amortissement",
 Description,Description,
 Details,Détails,
 "Direct Expenses","Dépenses directes",
 "Direct Income","Revenu direct",
+Discount,,
+"Discount Account",,
+"Discount Account is not set.",,
+"Discount After Tax","Réduction après taxes",
+"Discount Amount",,
+"Discount Amount (${0}) cannot be greated than Amount (${1}).",,
+"Discount Percent",,
+"Discount Percent (${0}) cannot be greater than 100.",,
+"Discount applied after taxation",,
+"Discount applied before taxation",,
+"Discounted Amount",,
+Discounts,,
 "Display Logo in Invoice","Afficher le logo sur la facture",
 "Display Precision","Précision de l'affichage",
 "Display Precision should have a value between 0 and 9.","La précision de l'affichage doit avoir une valeur comprise entre 0 et 9.",
@@ -180,8 +193,6 @@ Details,Détails,
 Docs,Documents,
 Documentation,Documentation,
 "Does Not Contain","Ne contient pas",
-"Download Update","Télécharger la mise à jour",
-"Downloading update","Mise à jour en téléchargement",
 Dr.,,
 Draft,Brouillon,
 Duplicate,Dupliquer,
@@ -193,6 +204,7 @@ Edit,Modifier,
 Email,,
 "Email Address","Adresse électronique",
 Empty,Vide,
+"Enable Discount Accounting",,
 "Enter Country to load States","Entrez le Pays pour charger le département",
 "Enter State","Entrez le département",
 "Entertainment Expenses","Dépenses liées au divertissement",
@@ -214,6 +226,7 @@ Export,Exporter,
 Fax,Fax,
 Field,Champ,
 Fieldname,"Nom du champ",
+"File ${0} does not exist",,
 "File selection failed.","Selection du fichier échoué.",
 Filter,Filtre,
 "Fiscal Year","Année fiscale",
@@ -238,7 +251,6 @@ GSTR2,GSTR2,
 General,Général,
 "General Ledger","Livre des Comptes général",
 "Get Started",Commencez,
-Gram,Gramme,
 "Grand Total","Total général",
 "Grand Total (Company Currency)","Total général (devise utilisée par la société)",
 "Greater Than","Plus grand que",
@@ -248,13 +260,12 @@ HSN/SAC,,
 "HSN/SAC Code","Code HSN/SAC",
 "Half Yearly",Semestriel,
 "Half Years",Semestres,
+Help,,
 "Hex Value","Valeur Hexadécimale",
 "Hide Get Started","Cacher 'Commencez'",
 "Hide Group Amounts","Cacher les montants de groupes",
 "Hides the Get Started section from the sidebar. Change will be visible on restart or refreshing the app.","Masque la section 'Commencez' de la barre latérale. Le changement sera visible au redémarrage ou au rafraichissement de l'application.",
-Hour,Heure,
 "How to Use Data Import","Comment utiliser l'import des données",
-"I can't find my language.","Je n'arrive pas à trouver ma langue.",
 INR,,
 Image,Image,
 "Import Data","Importer les Données",
@@ -269,8 +280,7 @@ Income,Revenu,
 Indigo,,
 "Indirect Expenses","Dépenses Indirectes",
 "Indirect Income","Revenu Indirect",
-Inflow,"Revenus",
-"Install Update","Installer la mise à jour",
+Inflow,Revenus,
 "Instance Id","Id de l'Instance",
 "Intergrated Tax","Taxe intégrée",
 "Internal Precision","Précision interne",
@@ -279,6 +289,7 @@ Investments,Investissements,
 Invoice,Facture,
 "Invoice Created","Facture créée",
 "Invoice Date","Date de la facture",
+"Invoice Discount",,
 "Invoice No","N° de facture",
 "Invoice No.","N° de facture.",
 "Invoice Setup","Configuration de la facture",
@@ -289,6 +300,7 @@ Is,Est,
 "Is Group","Est du Groupe",
 "Is Not","N'est Pas",
 "Is Not Empty","N'est pas vide",
+"Is Whole",,
 Item,Article,
 "Item Description","Description de l'Article",
 "Item Name","Nom de l'Article",
@@ -297,12 +309,12 @@ Items,Articles,
 "Journal Entries","Entrées du journal des comptes",
 "Journal Entry","Entrée du livre des comptes",
 "Journal Entry Account","Compte du livre des comptes",
-Kg,,
 "Label Index","Index du Label",
 Language,Langage,
 "Ledger Entries","Entrée dans le livret des comptes",
 "Left Index","Index de Gauche",
 "Legal Expenses","Frais juridiques",
+"Less Filters",,
 "Less Than","Moins de",
 Liability,Passifs,
 List,Lister,
@@ -317,30 +329,24 @@ Logo,,
 "Make Payment","Effectuer le paiement",
 "Mar 23, 2022",,
 "Marketing Expenses","Dépenses de marketing",
-Merriweather,,
-Meter,Metres,
 Minimal,,
+Misc,,
 "Miscellaneous Expenses","Dépenses diverses",
-Modern,Moderne,
 Modified,Modifié,
 "Modified By","Modifié par",
 Monthly,Mensuel,
 Months,Mois,
-Montserrat,,
+"More Filters",,
 Name,Nom,
 Navigate,Naviguer,
 "Net Total","Total Net",
 "Net Total (Company Currency)","Total Net (devise utilisée par la société)",
 "New ${0}","Nouveau ${0}",
 "New Account","Nouveau Compte",
+"New Entry","Nouvelle entrée",
 "New File","Nouveau Fichier",
-"New Journal Entry","Nouvelle entrée dans le journal",
 "New Purchase","Nouvel achat",
-"New Purchase Invoice","Nouvelle Facture d'achat",
 "New Sale","Nouvelle vente",
-"New Sales Invoice","Nouvelle facture de vente",
-"New version available","Nouvelle version disponible",
-Next,Suivant,
 No,Non,
 "No Data to Import","Aucune Donnée à Importer",
 "No Values to be Displayed","Aucune Valeur à afficher",
@@ -350,17 +356,18 @@ No,Non,
 "No labels have been assigned.","Aucun label n'a été assigné.",
 "No results found","Aucun Résultat Trouvé",
 "No transactions yet","Aucune transaction pour le moment",
-"No updates available","Aucune mise à jour disponible",
 None,Aucun,
+"Not Saved",,
 Notes,,
 "Number Series","Numéroter les Séries",
 "Number of ${0}","Numéro de ${0}",
+OK,,
 "Office Equipments","Equipements des Locaux",
 "Office Maintenance Expenses","Frais d'Entretien des Locaux",
 "Office Rent","Location des locaux",
 "Onboarding Complete","Embauche Finie",
+"Open Count",,
 "Open Folder","Ouvrir le dossier",
-"Open Sans",,
 "Opening (Cr)","Ouverture (Cr)",
 "Opening (Dr)","Ouverture (Dr)",
 "Opening Balance Equity","Solde d'ouverture Fonds propres",
@@ -368,9 +375,8 @@ Notes,,
 "Opening Entry","Ouvrir l'Entrée",
 Orange,,
 Organisation,Organisation,
-Outflow,"Dépenses",
+Outflow,Dépenses,
 "Outstanding Amount","Montant impayé",
-Oxygen,,
 "Pad Zeros","Remplir  de Zéros",
 Page,,
 Paid,Payé,
@@ -402,8 +408,10 @@ Place,Lieu,
 "Please Wait",,
 "Please assign the following fields ${0}",,
 "Please fill all values","Veuillez remplir toutes les valeurs",
+"Please restart and try again",,
 "Please select a file with data to import.","S'il-vous-plaît choisissez un fichier avec des données à importer.",
 "Please select a valid reference type.","S'il-vous-plaît séléctionnez un type de référence valide.",
+"Please set Round Off Account in the Settings.",,
 "Postal Code","Code postal",
 "Postal Expenses","Dépenses postales",
 "Posting Date","Date d'affichage",
@@ -453,7 +461,7 @@ Reports,Rapports,
 "Required Fields not Assigned",,
 Reset,Réinitialiser,
 "Retained Earnings","Bénéfices non distribués",
-"Reverse Chrg.","Autoliquidation",
+"Reverse Chrg.",Autoliquidation,
 Reverted,Rétabli,
 Reverts,Rétablis,
 "Review Accounts","Révision des Comptes",
@@ -461,41 +469,42 @@ Reverts,Rétablis,
 "Right Index","Index Droit",
 Role,Rôle,
 "Root Type","Type d'origine",
-"Round Off","Arrondir",
+"Round Off",Arrondir,
 "Round Off Account","Arrondir le Compte",
+"Round Off Account Not Found",,
+"Rounded Off",,
 Salary,Salaire,
 Sales,Ventes,
 "Sales Expenses","Frais de vente",
 "Sales Invoice","Facture de Vente",
 "Sales Invoice Item","Facture de Vente d'Article",
-"Sales Invoice Settings","Paramètres des Factures de Vente",
 "Sales Invoices","Factures des Ventes",
 "Sales Item Created","Article en Vente Créé",
 "Sales Items","Articles en Vente",
 "Sales Payments","Paiement des Ventes",
 Save,Enregistrer,
-Saved,Enregistré,
 "Save Template","Enregister le Modèle",
 "Save as PDF","Enregistrer en PDF",
 "Save as PDF Successful","Enregistré en PDF avec succès",
+Saved,Enregistré,
 Saving,Enregistrement,
 Search,Recherche,
 "Secured Loans","Prêts Garantis",
 "Securities and Deposits","Titres et dépôts",
 Select,Sélectionner,
-"Select CoA",Sélectionner le CoA,
-"Select Color",Selectionner la Couleur,
-"Select Country",Sélectionner le Pays,
-"Select File",Sélectionner le Fichier,
+"Select CoA","Sélectionner le CoA",
+"Select Color","Selectionner la Couleur",
+"Select Country","Sélectionner le Pays",
+"Select File","Sélectionner le Fichier",
 "Select Folder","Sélectionner le Dossier",
 "Select Image","Sélectionner l'Image",
 "Select Logo","Sélectionner le Logo",
-"Select a file for import",Sélectionner un fichier pour l'import,
+"Select a file for import","Sélectionner un fichier pour l'import",
 "Select file","Sélectionnez un fichier",
 "Select folder","Sélectionner un dossier",
-"Select your language",Sélectionner votre langue,
-"Selected file",Fichier sélectionné,
+"Selected file","Fichier sélectionné",
 Service,,
+"Set Discount Amount",,
 "Set an Import Type","Definir un Type d'Import",
 "Set the display language.","Définir une Langue d'Affichage",
 "Set the local code. This is used for number formatting.","Définissez le code local, il est utilisé pour le formatage des numéros.",
@@ -503,7 +512,7 @@ Service,,
 "Sets the app-wide date display format.","Définit le format d'affichage de la date pour l'application.",
 "Sets the internal precision used for monetary calculations. Above 6 should be sufficient for most currencies.","Définit la précision interne utilisée pour les calculs monétaires. Une précision supérieure à 6 devrait être suffisante pour la plupart des monnaies.",
 "Setting Up Instance","Paramétrage de l'Instance",
-"Setting Up...","Paramétrage...",
+"Setting Up...",Paramétrage...,
 Settings,Paramètres,
 "Settings changes will be visible on reload","Les changements de paramètres seront visibles lors du rechargement",
 Setup,Configuration,
@@ -517,6 +526,8 @@ Setup,Configuration,
 "Setup your tax templates for your sales or purchase transactions","Configurez votre modèle de taxe pour vos ventes ou transactions d'achats",
 "Show Me","Montre Moi",
 "Single Value","Une seule valeur",
+"Skip Child Tables",,
+"Skip Transactions",,
 "Smallest Currency Fraction Value","Valeur de la plus petite fraction de la monnaie",
 Softwares,Logiciels,
 "Something has gone terribly wrong. Please check the console and raise an issue.","Quelque chose s'est terriblement mal passé. Veuillez vérifier la console et rapportez le problème.",
@@ -557,6 +568,7 @@ Tax,Taxe,
 "Tax ID","Numéro d'identification fiscale",
 "Tax Summary","relevé fiscal",
 "Taxable Value","Valeur imposable",
+"Taxed Amount",,
 Taxes,Taxes,
 Teal,"Bleu Sarcelle",
 "Telephone Expenses","Frais Téléphonique",
@@ -566,7 +578,6 @@ Temporary,Temporaire,
 "Temporary Opening","Ouverture temporaire",
 Terms,Conditions,
 "The following ${0} entries were created: ${1}","Les ${0} entrées suivantes ont été créées: ${1}",
-"Theme Color","Couleur du thème",
 "This Month","Ce mois",
 "This Quarter","Ce trimestre",
 "This Year","Cette année",
@@ -598,23 +609,20 @@ Transfer,Transfert,
 "Trial Balance","Balance Comptable",
 Type,Type,
 "Type to search...","Type à chercher...",
-Unit,Unité,
+UOM,,
 "Unit Type","Type d'unité",
 Unpaid,Impayé,
 "Unsecured Loans","Prêts non garantis",
 "Until Date","Date Butoir",
-"Update downloaded","Mise à jour téléchargée",
 "User Remark","Remarque de l'utilisateur",
 "Utility Expenses","Dépenses de services publics",
 Value,Valeur,
 "Value missing for ${0}","Valeur manquante pour ${0}",
-"Verify Imported Data","Vérifier les données importées",
 Version,,
-"Version ${0} available","Version ${0} disponible",
 "View Purchases","Voir les Achats",
 "View Sales","Voir les Ventes",
 "Welcome to Frappe Books","Bienvenue chez Frappe Books",
-"Write Off","Déductible",
+"Write Off",Déductible,
 "Write Off Account","Compte des déduction fiscales",
 "Write Off Account not set. Please set Write Off Account in General Settings","Compte des déduction fiscales no défini. Veuillez entrer un Compte des déduction fiscales dans les paramètres généraux",
 "Write Off Entry","Entrée de déductions fiscales",
@@ -627,5 +635,3 @@ john@doe.com,,
 reports,rapports,
 setup,configuration,
 "verify the imported data and click on",,
-"Discount After Tax","Réduction après taxes",
-"New Entry","Nouvelle entrée",
